{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 129,
  "lineage": "e976b0e1-4d9d-d793-8452-b085fd3533a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myos",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0732b62d310b80e97",
            "arn": "arn:aws:ec2:ap-south-1:349018947514:instance/i-07d0346fb8ce16525",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d0346fb8ce16525",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey12",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c9c22836e024d6a1",
            "private_dns": "ip-192-168-0-99.ap-south-1.compute.internal",
            "private_ip": "192.168.0.99",
            "public_dns": "ec2-13-232-29-230.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.29.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00a9db6d8347beadf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5f4658ba5fea349",
            "tags": {
              "Name": "mypublicos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05d4e6271fff2b2c1"
            ]
          },
          "dependencies": [
            "aws_security_group.mypublicsg",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:internet-gateway/igw-0a06f6865a3a2844a",
            "id": "igw-0a06f6865a3a2844a",
            "owner_id": "349018947514",
            "tags": {
              "Name": "tera-gw"
            },
            "vpc_id": "vpc-05da871e849b681fd"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a7e70c47d6ebda10",
            "owner_id": "349018947514",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a06f6865a3a2844a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "at_routetable"
            },
            "vpc_id": "vpc-05da871e849b681fd"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fd4a9090ddbfa97",
            "route_table_id": "rtb-0a7e70c47d6ebda10",
            "subnet_id": "subnet-0b5f4658ba5fea349"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mypublicsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:security-group/sg-05d4e6271fff2b2c1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d4e6271fff2b2c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_nfs",
            "name_prefix": "",
            "owner_id": "349018947514",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mypublic_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05da871e849b681fd"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:subnet/subnet-0b5f4658ba5fea349",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0b5f4658ba5fea349",
            "map_public_ip_on_launch": true,
            "owner_id": "349018947514",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-05da871e849b681fd"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:vpc/vpc-05da871e849b681fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08475837159d75f60",
            "default_route_table_id": "rtb-0b6b0ae7f8f142542",
            "default_security_group_id": "sg-09d245142e7540105",
            "dhcp_options_id": "dopt-35bc475e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05da871e849b681fd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b6b0ae7f8f142542",
            "owner_id": "349018947514",
            "tags": {
              "Name": "tera-vpc"
            }
          }
        }
      ]
    }
  ]
}